# pico-mfm-floppy

./: CMakeLists.txt  README.md
examples/: cli.c  diskdump.c  mfmstats.c  selftest.c
src/: crc.c  crc.h  f12.c  f12.h  fat12.c  fat12.h  floppy.c  floppy.h  flux_read.pio  flux_write.pio  lru.c  lru.h  mfm_decode.c  mfm_decode.h  mfm_encode.c  mfm_encode.h
system-shock-multilingual-floppy-ibm-pc/: .gitignore  readme.txt
tests/: CMakeLists.txt  Makefile  flux_sim.c  flux_sim.h  pio_emu.c  pio_emu.h  pio_sim.c  pio_sim.h  run_all.sh  scp_disk.h  test.h  test_f12.c  test_fat12.c  test_fat12_debug.c  test_flux_sim.c  test_fuzz.c  test_lru.c  test_mfm.c  test_mfm_size_code.c  test_pio_emu.c  test_pio_sim.c  test_robustness.c  test_scp_fat12.c  test_scp_roundtrip.c  test_write_verify.c  vdisk.h
tests/stubs/: flux_read.pio.h  flux_write.pio.h
tests/stubs/hardware/: clocks.h  gpio.h  pio.h  sync.h
tests/stubs/pico/: stdlib.h  time.h
